# Word2Vec_vs_distilroBERTa_clustering_financial_events

./: .env  .gitignore  README.md  main.py  pyproject.toml
data/for_models/: clean_news_bpe_2026-02-26_to_2026-03-03.csv  clean_news_w2v_2026-02-26_to_2026-03-03.csv  news_features_w2v.csv
data/processed/daily_dtm/: dtm_2026-01-08.csv  dtm_2026-01-09.csv  dtm_2026-01-10.csv  dtm_2026-01-11.csv  dtm_2026-01-12.csv  dtm_2026-01-13.csv  dtm_2026-01-14.csv  dtm_2026-01-15.csv  dtm_2026-01-16.csv  dtm_2026-01-17.csv  dtm_2026-01-18.csv  dtm_2026-01-19.csv  dtm_2026-01-20.csv  dtm_2026-01-21.csv  dtm_2026-01-22.csv  dtm_2026-01-23.csv  dtm_2026-01-24.csv  dtm_2026-01-25.csv  dtm_2026-01-26.csv  dtm_2026-01-27.csv  dtm_2026-01-28.csv  dtm_2026-01-29.csv  dtm_2026-01-30.csv  dtm_2026-01-31.csv  dtm_2026-02-01.csv  dtm_2026-02-02.csv  dtm_2026-02-03.csv  dtm_2026-02-04.csv  dtm_2026-02-05.csv  dtm_2026-02-06.csv  dtm_2026-02-07.csv  dtm_2026-02-08.csv  dtm_2026-02-09.csv  dtm_2026-02-10.csv  dtm_2026-02-11.csv  dtm_2026-02-12.csv  dtm_2026-02-13.csv  dtm_2026-02-14.csv  dtm_2026-02-15.csv  dtm_2026-02-16.csv  (+126 more)
data/processed/daily_dtm_spacy/: dtm_2026-01-08.csv  (+82 more)
data/raw/: raw_nasdaq_2026.csv  raw_news_2026.csv  raw_news_urls.csv  raw_tweets_2026.csv
notebooks/: 0_extract_data.ipynb  1_lexicon_generation.ipynb  2_feature_engineering.ipynb  3_news_clustering.ipynb  4_llm_clustering.ipynb  4_rag.ipynb  codetweets.ipynb  nasdaq_session.session  session.session
src/: extract_data.py  feature_engineering.py  lexicon_generation.py  llm_clustering.py  news_clustering.py  pipeline.py
(+415 files in other folders)
