[project]
name = "nlp-financial-event-clustering-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deptry>=0.25.1",
    "dotenv>=0.9.9",
    "gensim>=4.4.0",
    "lxml-html-clean>=0.4.4",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "newspaper3k>=0.2.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "ruff>=0.15.9",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.3.0",
    "spacy>=3.8.14",
    "telethon>=1.42.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
    "wordcloud>=1.9.6",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
